chore: update Pipestream BOM to 0.7.9 and refactor event type usage
- Bumped Pipestream BOM version from `0.7.8` to `0.7.9` for updated dependency management.
- Replaced `EventType` with `PlatformEventType` throughout the codebase for improved clarity and consistency.
- Renamed module-related response types to reflect platform-specific context.